test_programs/compile_failure/noirc_frontend_tests_cannot_pass_unconstrained_function_to_regular_function/src/main.nr

    fn main() {
        let func = foo;
        expect_regular(func);
    }

    unconstrained fn foo() {}

    fn expect_regular(_func: fn() -> ()) {
    }
    